--- a/contains-bad-words.html
+++ b/contains-bad-words.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Hello from Server 1</h1>
-    <p>This is a test page served from server1. fuck you</p>
+    <p>This is a test page served from server1. fuck you, you bitch, you fucking cunt</p>
 </body>
 </html>
